# mcus

./: .bzrignore  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac
data/: Makefile.am  mcus.desktop.in  mcus.ui  ocr-assembly.lang
data/examples/: led_chaser.asm  scrolling_message.asm
data/icons/: mcus_win_icon.rc  mcus_win_icon.rc.in
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
examples/: Makefile.am  adc_divider.asm  ssd_tester.asm
help/: ChangeLog  Makefile.am  mcus.omf.in
help/C/: adc.page  editing.page  index.page  inputs.page  introduction.page  lookup-tables.page  mcus.xml  outputs.page  reference.page  simulating.page
packaging/: README.txt  mcus.nsi  registerExtension.nsh  windows.sh
packaging/GTK2-Runtime/etc/gtk-2.0/: gtk.immodules
packaging/GTK2-Runtime/etc/pango/: pango.modules
packaging/GTK2-Runtime/gtk2-runtime/: gtk-postinstall.bat
packaging/GTK2-Runtime/lib/: cairo.lib  gailutil.lib  gdk-win32-2.0.lib  gdk_pixbuf-2.0.lib  libxml2_a.lib  libxml2_a_dll.lib
packaging/GTK2-Runtime/lib/locale/en_GB/LC_MESSAGES/: gtksourceview-2.0.mo
packaging/GTK2-Runtime/lib/pkgconfig/: cairo-ft.pc  cairo-pdf.pc  cairo-ps.pc  cairo-win32-font.pc  freetype2.pc  gail.pc  gdk-win32-2.0.pc
po/: ChangeLog  POTFILES.in  POTFILES.skip
src/: Makefile.am  analogue-input.c  analogue-input.h  compiler.c  compiler.h  input-port.c  input-port.h  instruction.c  instruction.h  instructions.h  interface.c  interface.h  main-window.c  main-window.h  main.c  main.h  mcus_win_icon.rc  parser.c  parser.h  simulation.c  simulation.h
src/widgets/: byte-array.c  byte-array.h  led.c  led.h  seven-segment-display.c  seven-segment-display.h
win32/: README.txt  mcus.nsi.in  windows.reg
win32/GTK2-Runtime/etc/gtk-2.0/: gdk-pixbuf.loaders
win32/GTK2-Runtime/gtk2-runtime/: gtk2r-env.bat
win32/GTK2-Runtime/lib/: freetype.def  gtk-win32-2.0.lib
win32/GTK2-Runtime/lib/pkgconfig/: cairo-png.pc  cairo-svg.pc  cairo-win32.pc  cairo.pc  gdk-pixbuf-2.0.pc  gtk+-win32-2.0.pc  libpng14.pc
win32/GTK2-Runtime/share/icons/hicolor/: index.theme
